# digital-cv

./: .env.example  .gitignore  README.md  app.py  chat_log.txt  pyproject.toml
.github/: copilot-instructions.md
data/chroma/: chroma.sqlite3
me/: summary.txt
tests/: test_query.py
utils/: chat.py  create_vector_db.py  logging.py  text_processing.py  tool_calls.py  vector_db.py
